# rbo

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pydocstyle  README.md  docker-compose.yml  entrypoint_base_opt.sh  pyproject.toml  requirements.txt
ci/: .gitlab-ci.yml  Dockerfile  build_image.sh
ci/coverage/html/: README.md
data/: cost_success.csv  max_reward_plot_pos_rot.csv  max_reward_plot_xyz.csv  optuna.db  solutions.txt
data/tasks/base_opt/edge_case/: XI_cube_hard_0.json  XI_cube_hard_1.json  XI_cube_hard_2.json  XI_cube_hard_3.json  XI_cube_hard_4.json  XI_cube_hard_5.json  XI_cube_hard_6.json  XI_cube_hard_7.json  XI_cube_hard_8.json  XI_cube_hard_9.json  XI_cube_medium_0.json  XI_cube_medium_1.json  XI_cube_medium_2.json  XI_cube_medium_3.json  XI_cube_medium_4.json  XI_cube_medium_5.json  XI_cube_medium_6.json  c_sim_hard_0.json  (+182 more)
evaluation/: best_solutions.pkl  createSolVis.py  evaluate_all.ipynb  pgf_plot_utils.py  prepare_solutions.py  sol_edge_case.json  upload_best_solutions.py
experiments/: run_evaluation.sh  run_hyperparameter_optimization.sh
src/: .coveragerc
src/base_opt/: __init__.py
src/base_opt/base_opt/: BaseOptimizer.py  __init__.py  config.py  evaluate_algorithm.py  hyperparameter_optimization.py  hyperparameter_search_spaces.py  hyperparameters.yml
src/base_opt/utilities/: AssemblyFilter.py  AsssemblyFilter.py  Proxies.py  TaskGenerator.py  __init__.py  create_edge_case_tasks.py  eval_utils.py  file_locations.py
tests/: .gitlab-ci.yml  test_assembly_filter.py  test_base_optimizer.py  test_environments.py
(+245 files in other folders)
